--- a/AMSS/nbproject/project.properties
+++ b/AMSS/nbproject/project.properties
@@ -19,10 +19,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/AMSS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.LGoodDatePicker-10.3.1.jar=src/LGoodDatePicker-10.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.LGoodDatePicker-10.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
