--- a/AMSS/nbproject/private/private.properties
+++ b/AMSS/nbproject/private/private.properties
@@ -1,4 +1,7 @@
+do.depend=false
+do.jar=true
+javac.debug=true
 #Tue Oct 17 11:45:34 CDT 2017
 javadoc.preview=true
 compile.on.save=true
-user.properties.file=/home/carlos/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\Carlos\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
