--- a/AMSS/nbproject/project.properties
+++ b/AMSS/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=AMSS
 application.vendor=Sun Microsystems Inc
 build.classes.dir=${build.dir}/classes
@@ -18,18 +22,23 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/AMSS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.LGoodDatePicker-10.3.1.jar=src/LGoodDatePicker-10.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${file.reference.LGoodDatePicker-10.3.1.jar}
+    ${file.reference.LGoodDatePicker-10.3.1.jar}:\
+    ${libs.JDBC_SQLSERVER.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -47,6 +56,7 @@ javadoc.windowtitle=
 main.class=AMSS.MainMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
