--- a/AMSS/nbproject/project.properties
+++ b/AMSS/nbproject/project.properties
@@ -26,7 +26,7 @@ endorsed.classpath=
 excludes=
 file.reference.LGoodDatePicker-10.3.1.jar=src/LGoodDatePicker-10.3.1.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.LGoodDatePicker-10.3.1.jar}:\
